--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ pest = "2.5.1"
 pest_derive = "2.5.1"
 static_init = "1.0.3"
 paste = "1.0.9"
+ord-utils = {git = "https://github.com/puyral/ord-utils"}
+bitflags = "1.3.2"
