--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ static_init = "1.0.3"
 paste = "1.0.9"
 ord-utils = {git = "https://github.com/puyral/ord-utils"}
 bitflags = "1.3.2"
+crossbeam-utils = "0.8.14" # because I made poor choices
