--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ paste = "1.0.9"
 ord-utils = {git = "https://github.com/puyral/ord-utils"}
 bitflags = "1.3.2"
 crossbeam-utils = "0.8.14" # because I made poor choices
+itertools = "0.10.5"
