--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ bitflags = "1.3.2"
 crossbeam-utils = "0.8.14" # because I made poor choices
 itertools = "0.10.5"
 clap = { version = "4.0.32", features = ["derive"] }
+take_mut = "0.2.2"
