--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ static_init = "1.0.3"
 paste = "1.0.9"
 ord-utils = {git = "https://github.com/puyral/ord-utils"}
 bitflags = "1.3.2"
-crossbeam-utils = "0.8.14" # because I made poor choices
+# crossbeam-utils = "0.8.1 4" # because I made poor choices
 itertools = "0.10.5"
 clap = { version = "4.0.32", features = ["derive"] }
 take_mut = "0.2.2"
 if_chain = "1.0.2"
+thiserror = "1.0.38"
+anyhow = "1.0.68"
