--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ pest = "2.5.1"
 pest_derive = "2.5.1"
 static_init = "1.0.3"
 paste = "1.0.9"
-ord-utils = {git = "https://github.com/puyral/ord-utils"}
-bitflags = "1.3.2"
+ord-utils = { git = "https://github.com/puyral/ord-utils" }
+bitflags = "2.0.2"
 # crossbeam-utils = "0.8.1 4" # because I made poor choices
 itertools = "0.10.5"
 clap = { version = "4.0.32", features = ["derive"] }
@@ -19,4 +19,6 @@ take_mut = "0.2.2"
 if_chain = "1.0.2"
 thiserror = "1.0.38"
 anyhow = "1.0.68"
+bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
+# typed-arena = "2.0.2"
 # either = "1.8.1"
