--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ take_mut = "0.2.2"
 if_chain = "1.0.2"
 thiserror = "1.0.38"
 anyhow = "1.0.68"
-bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
+# match_deref = "0.1.1"
+# bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
 # typed-arena = "2.0.2"
 # either = "1.8.1"
