--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ take_mut = "0.2.2"
 if_chain = "1.0.2"
 thiserror = "1.0.38"
 anyhow = "1.0.68"
+# qcell = "0.5.3"
 # match_deref = "0.1.1"
 # bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
 # typed-arena = "2.0.2"
