--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,15 @@ bitflags = "2.0.2"
 # crossbeam-utils = "0.8.1 4" # because I made poor choices
 itertools = "0.10.5"
 clap = { version = "4.0.32", features = ["derive"] }
-take_mut = "0.2.2"
+# take_mut = "0.2.2"
 if_chain = "1.0.2"
 thiserror = "1.0.38"
 anyhow = "1.0.68"
 # ouroboros = "0.17.0"
 derivative = {version = "2.2.0"}
-enum_dispatch = "0.3.12"
-aliasable = "0.1.3"
+# aliasable = "0.1.3"
 qcell = "0.5.3"
+enum_dispatch = "0.3.11"
 # qcell = "0.5.3"
 # match_deref = "0.1.1"
 # bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
