--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ paste = "1.0.9"
 ord-utils = { git = "https://github.com/puyral/ord-utils" }
 bitflags = "2.0.2"
 # crossbeam-utils = "0.8.1 4" # because I made poor choices
-itertools = "0.10.5"
+itertools = "0.11"
 clap = { version = "4.0.32", features = ["derive"] }
 # take_mut = "0.2.2"
 if_chain = "1.0.2"
@@ -22,10 +22,11 @@ anyhow = "1.0.68"
 # ouroboros = "0.17.0"
 derivative = {version = "2.2.0"}
 # aliasable = "0.1.3"
-qcell = "0.5.3"
-enum_dispatch = "0.3.11"
+# qcell = "0.5.3"
+# enum_dispatch = "0.3.11"
 macro-attr = "0.2.0"
 hashbrown = "0.14.0"
+const_format = "0.2.31"
 # qcell = "0.5.3"
 # match_deref = "0.1.1"
 # bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
