--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,10 @@
 [workspace]
 members = ["cryptovampire", "cryptovampire-lib", "utils"]
+
+[workspace.dependencies]
+itertools = "0.11"
+if_chain = "1.0.2"
+hashbrown = "0.14.0"
+log = { version = "0.4", features = ["release_max_level_warn"] }
+static_init = "1.0.3"
+paste = "1.0.9"
