--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["cryptovampire", "cryptovampire-lib", "utils"]
 resolver = "2"
 
 [workspace.dependencies]
-itertools = "0.12"
+itertools = "0.13"
 if_chain = "1.0.2"
 hashbrown = "0.14.0"
 log = { version = "0.4", features = ["release_max_level_warn"] }
@@ -11,3 +11,4 @@ static_init = "1.0.3"
 paste = "1.0.9"
 thiserror = "1.0.38"
 macro-attr = "0.2.0"
+anyhow = "1.0.68"
