--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -24,4 +24,5 @@ static_init = { workspace = true }
 paste = { workspace = true }
 macro-attr ={ workspace = true }
 anyhow = { workspace = true }
+thiserror = { workspace = true }
 # regex = "1.10.4"
