--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -25,4 +25,4 @@ paste = { workspace = true }
 macro-attr ={ workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
-# regex = "1.10.4"
+regex = "1.10.4"
