--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -26,3 +26,4 @@ macro-attr ={ workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 regex = "1.10.4"
+tptp = "0.31.1"
