All lot of doc for unfolding and subsitution
related to #6

--- a/cryptovampire-lib/Cargo.toml
+++ b/cryptovampire-lib/Cargo.toml
@@ -23,6 +23,7 @@ paste = { workspace = true }
 thiserror = { workspace = true }
 macro-attr ={ workspace = true }
 anyhow = { workspace = true }
+derive_builder = "0.20.0"
 
 # dashmap = "5.5.3"
 # smol = "2.0.0"
