--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [workspace]
 members = ["cryptovampire", "cryptovampire-lib", "utils"]
 resolver = "2"
+authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
 
 [workspace.dependencies]
 itertools = "0.13"
 if_chain = "1.0.2"
 hashbrown = "0.14.0"
 log = { version = "0.4", features = ["release_max_level_warn"] }
-static_init = "1.0.3"
-paste = "1.0.9"
-thiserror = "1.0.38"
-macro-attr = "0.2.0"
-anyhow = "1.0.68"
+static_init = "1.0"
+paste = "1.0"
+thiserror = "1.0"
+macro-attr = "0.2"
+anyhow = "1.0"
