--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
-members = ["cryptovampire", "cryptovampire-lib", "utils"]
+members = ["cryptovampire", "cryptovampire-lib", "cryptovampire-bridge", "utils"]
 resolver = "2"
 # authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
+default-members = ["cryptovampire", "cryptovampire-lib"]
 
 [workspace.dependencies]
 itertools = "0.13"
@@ -13,3 +14,4 @@ paste = "1.0"
 thiserror = "1.0"
 macro-attr = "0.2"
 anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"]}
