--- a/cryptovampire-bridge/Cargo.toml
+++ b/cryptovampire-bridge/Cargo.toml
@@ -25,3 +25,6 @@ serde = { workspace = true }
 env_logger = "0.11"
 serde_json = "1.0.120"
 
+[dev-dependencies]
+serde_path_to_error = "0.1"
+paste = { workspace = true }
