--- a/cryptovampire-lib/Cargo.toml
+++ b/cryptovampire-lib/Cargo.toml
@@ -30,6 +30,8 @@ serde = { version = "1.0", features = ["derive"], optional = true}
 tptp = "0.31"
 regex = "1.10"
 tempfile = "3.10"
+shared_child = "1.0.0"
+once_cell = "1.19.0"
 
 # dashmap = "5.5.3"
 # smol = "2.0.0"
