initial hack into the original parser
- move `cryptovampire-bridge` back into `cryptovampire`
- remade the error system for parsing so that it does not relly on `pest::Span`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["cryptovampire", "cryptovampire-lib", "cryptovampire-bridge", "utils"]
+members = ["cryptovampire", "cryptovampire-lib", "utils"]
 resolver = "2"
 # authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
 default-members = ["cryptovampire", "cryptovampire-lib"]
