--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -19,6 +19,7 @@ paste = { workspace = true }
 macro-attr ={ workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+serde = { workspace = true }
 
 pest = "2.5.1"
 pest_derive = "2.5.1"
@@ -27,3 +28,8 @@ derivative = { version = "2.2" }
 const_format = "0.2"
 env_logger = "0.11"
 clap_complete = "4.5.7"
+serde_json = "1.0.120"
+
+[dev-dependencies]
+serde_path_to_error = "0.1"
+paste = { workspace = true }
