--- a/cryptovampire-lib/Cargo.toml
+++ b/cryptovampire-lib/Cargo.toml
@@ -2,12 +2,12 @@
 name = "cryptovampire-lib"
 version = "0.4.0"
 edition = "2021"
-authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
+authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-utils ={ path = "../utils"}
+utils ={ path = "../utils", features = ["serde"]}
 # ord-utils = { git = "https://github.com/puyral/ord-utils" }
 
 # qcell = "0.5.3"
