--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -2,7 +2,7 @@
 name = "cryptovampire"
 version = "0.4.0"
 edition = "2021"
-authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
+authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
