context with builder to extend it more easily

--- a/cryptovampire-lib/Cargo.toml
+++ b/cryptovampire-lib/Cargo.toml
@@ -23,9 +23,9 @@ paste = { workspace = true }
 thiserror = { workspace = true }
 macro-attr ={ workspace = true }
 anyhow = { workspace = true }
+derive_builder = { workspace = true }
 
 bitflags = "2.0"
-derive_builder = "0.20.0"
 tptp = "0.31"
 regex = "1.10"
 tempfile = "3.10"
