--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -20,6 +20,7 @@ macro-attr ={ workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
+derive_builder = { workspace = true }
 
 pest = "2.5.1"
 pest_derive = "2.5.1"
