--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = "1.0"
 macro-attr = "0.2"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"]}
+derive_builder = "0.20.0"
