--- a/cryptovampire/Cargo.toml
+++ b/cryptovampire/Cargo.toml
@@ -30,6 +30,7 @@ const_format = "0.2"
 env_logger = "0.11"
 clap_complete = "4.5.7"
 serde_json = "1.0.120"
+base64 = "0.22.1"
 
 [dev-dependencies]
 serde_path_to_error = "0.1"
