--- a/cryptovampire-lib/Cargo.toml
+++ b/cryptovampire-lib/Cargo.toml
@@ -3,6 +3,9 @@ name = "cryptovampire-lib"
 version = "0.5.0"
 edition = "2021"
 authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]
+description = "A computationnally sound automated cryptographic protocol verifier based on the CCSA."
+readme = "../README.md"
+license-file = "../LICENCE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
