--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"]}
 derive_builder = "0.20.0"
 bitflags = "2.6"
+
+[all.package.lints.rust]
+elided_lifetimes_in_paths = "error"
