--- a/crates/cryptovampire/Cargo.toml
+++ b/crates/cryptovampire/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cryptovampire-lib = { path = "../cryptovampire-lib"}
-utils = { path = "../utils" }
+# cryptovampire-lib = { path = "../cryptovampire-lib"}
+utils = { path = "../utils", features = ["serde"] }
 logic_formula = {path = "../logic_formula", features = ["serde"]}
 
 itertools = { workspace = true }
@@ -20,8 +20,9 @@ paste = { workspace = true }
 macro-attr ={ workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"]}
 derive_builder = { workspace = true }
+bitflags = { workspace = true }
 
 pest = "2.7"
 pest_derive = "2.7"
@@ -32,6 +33,12 @@ env_logger = "0.11"
 clap_complete = "4.5.7"
 serde_json = "1.0.120"
 base64 = "0.22.1"
+tptp = "0.31"
+regex = "1.10"
+tempfile = "3.10"
+shared_child = "1.0.0"
+once_cell = "1.19.0"
+which = "6.0.1"
 
 [dev-dependencies]
 serde_path_to_error = "0.1"
