--- a/crates/cryptovampire/Cargo.toml
+++ b/crates/cryptovampire/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]
 # cryptovampire-lib = { path = "../cryptovampire-lib"}
 utils = { path = "../utils", features = ["serde"] }
 logic_formula = {path = "../logic_formula", features = ["serde"]}
+cryptovampire_macros = {path = "../cryptovampire_macros"}
 
 itertools = { workspace = true }
 if_chain = { workspace = true }
@@ -18,7 +19,7 @@ log = { workspace = true }
 static_init = { workspace = true }
 paste = { workspace = true }
 macro-attr ={ workspace = true }
-anyhow = { workspace = true }
+# anyhow = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"]}
 derive_builder = { workspace = true }
