--- a/crates/cryptovampire/Cargo.toml
+++ b/crates/cryptovampire/Cargo.toml
@@ -40,6 +40,7 @@ tempfile = "3.10"
 shared_child = "1.0.0"
 once_cell = "1.19.0"
 which = "6.0.1"
+nom = "7"
 
 [dev-dependencies]
 serde_path_to_error = "0.1"
