--- a/crates/logic_formula/Cargo.toml
+++ b/crates/logic_formula/Cargo.toml
@@ -6,6 +6,10 @@ authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lints]
+workspace = true
+
+
 [dependencies]
 
 serde = {workspace = true, optional = true}
