--- a/crates/indistinguishability/Cargo.toml
+++ b/crates/indistinguishability/Cargo.toml
@@ -11,6 +11,7 @@ itertools.workspace = true
 static_init = { workspace = true }
 paste = { workspace = true }
 rustc-hash = "2.1.0"
+smallvec = { version = "1.13.2", features = ["const_generics", "const_new", "union"] }
 
 [lints]
 workspace = true
